--- a/_pages/team.html
+++ b/_pages/team.html
@@ -9,13 +9,6 @@ author_profile: true
 		
 <h4>PhD Students</h4>
 <ul>
-	<li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.9 – Present<br>
- <!--	Internship:  <br>  -->
- Award: (2019.9) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$5,000</font> <br> 
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 	
   <li><strong>Yan Xu</strong>, 2018.1 – Present (on sick leave)<br>
 Award 1: (2018.5-2018.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
@@ -24,7 +17,24 @@ Award 2: (2018.9-2019.8) VADA Trainee Scholarship (NSERC CREATE) <font color="bl
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-  
+
+ <li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.9 – Present<br>
+ <!--	Internship:  <br>  -->
+ Award: (2019.9) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$5,000</font> <br> 
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+	
+<li><strong> Mahsa Tavakoli</strong>, 2021.9 – Present<br>
+ <!--	Internship:  <br>  -->
+ Award 1: (2021.9 - 2023.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br> 
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+
  <!--    <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>  --> 
  <!--    Award 1: (2018.9 - 2020.02) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br>  -->
   <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
@@ -80,14 +90,6 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-<li><strong>  Yushan Hu</strong> , 2020.9 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
- <!--	Internship:  <br>  -->
-Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
 	<li><strong>  Xiangling Ji</strong>, 2020.9 – Present<br>	
  <!--	Internship:  <br>  -->
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
@@ -105,9 +107,25 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.9 – Present<br>	  </li>	
-  Award: (2020.9) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$2,500</font> <br>
+  Award	1: (2020.9) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$2,500</font> <br>
+Award 2: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.9 – Present<br>	  </li>
 	<li><strong>  Xiaolin Huang</strong>,  2020.9 – Present<br>	  </li>
+
+	<li><strong>  Yushan Hu</strong> , 2021.9 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+ <!--	Internship:  <br>  -->
+Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	<li><strong>  Haochen Ning</strong>,  2021.9 – Present<br>	  </li>
+	<li><strong>  Anqi Li</strong>,  2021.9 – Present<br>	  </li>
+	<li><strong>  Chang Bi</strong>,  2021.9 – Present<br>	  </li>
+	<li><strong>  Zhaoze Liu</strong>,  2021.9 – Present<br>	  </li>
+
+	
 </ul>
 
 <h4>Visiting Faculty</h4>
