--- a/_pages/team.html
+++ b/_pages/team.html
@@ -28,7 +28,7 @@ Award 2: (2018.9-2019.8) VADA Trainee Scholarship (NSERC CREATE) <font color="bl
 	
 <li><strong> Mahsa Tavakoli</strong>, 2021.9 – Present<br>
  <!--	Internship:  <br>  -->
- Award 1: (2021.9 - 2023.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br> 
+ Award 1: (2021.9 - 2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000&nbsp; </font> <br> 
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
