--- a/_pages/team.html
+++ b/_pages/team.html
@@ -124,6 +124,7 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 	<li><strong>  Anqi Li</strong>,  2021.9 – Present<br>	  </li>
 	<li><strong>  Chang Bi</strong>,  2021.9 – Present<br>	  </li>
 	<li><strong>  Zhaoze Liu</strong>,  2021.9 – Present<br>	  </li>
+	<li><strong>  Hadi Roopeai</strong>,  2021.9 – Present<br>	  </li>
 
 	
 </ul>
