--- a/_pages/team.html
+++ b/_pages/team.html
@@ -55,16 +55,7 @@ Award 2: (2018.9-2019.8) VADA Trainee Scholarship (NSERC CREATE) <font color="bl
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
- <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2018.9 – Present<br>
- <!--	Internship:  <br>  -->
-	 Research Assistant: (2019.5 -2019.8) Department of Mathematics and Statistics, UVic <br>
-	 Award1: (2019.9-2020.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
-	 Internship: (2020.1-2020.6) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
-	 Award2: (2020.7-2020.10) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
+
 
 <li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2019.9 – Present<br>
  <!--	Internship:  <br>  -->
@@ -164,14 +155,25 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
- <li><strong>Qincheng Lu</strong>, 2018.9 – Present<br>
+  <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.4<br>
+ <!--	Internship:  <br>  -->
+	 Research Assistant: (2019.5 -2019.8) Department of Mathematics and Statistics, UVic <br>
+	 Award1: (2019.9-2020.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+	 Internship: (2020.1-2020.6) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
+	 Award2: (2020.7-2020.10) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+	
+ <li><strong>Qincheng Lu</strong>, 2020.08<br>
  <!--	Internship:  <br>  -->
  	Award: (2018.9-2019.8) MITACS Globalink Graduate Fellowship   <font color="blue"> $15,000 </font> <br>
  <!--   Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> -->  
     First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
- <li><strong>Ailan Shi</strong> , 2017.9 – 2019.5 <br>
+ <li><strong>Ailan Shi</strong> , 2019.5 <br>
 	Internship: (2018.5-2018.8) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.9-2019.6) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 	First job: <a href="https://www.lalamove.com/"> LalaMove</a>, Shenzhen
@@ -181,7 +183,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-  <li><strong>Peijie Xie</strong>, 2017.9 – 2019.5 <br>
+  <li><strong>Peijie Xie</strong>, 2019.5 <br>
 	Work Study: (2017.9 - 2018.4) Centre for Biomedical Research, UVic  <br>
 	Internship:  (2018.5 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
 	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver
