--- a/_pages/team.html
+++ b/_pages/team.html
@@ -61,7 +61,7 @@ Award 2: (2018.9-2019.8) VADA Trainee Scholarship (NSERC CREATE) <font color="bl
  <!--	Internship:  <br>  -->
 Award: (2019.9-2020.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
 Internship: (2020.7-2018.8) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
-Research Assistant: (2020.9 -2020.12) Department of Mathematics and Statistics, UVic <br>
+Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
 	
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -82,7 +82,7 @@ Award: (2020.9-2021.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
   </li>
 
 	<li><strong>  Xiangling Ji</strong>, 2020.9 – Present<br>	
- <!--	Internship:  <br>  -->
+Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
