--- a/_pages/team.html
+++ b/_pages/team.html
@@ -129,7 +129,24 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 <h4>Undergraduate Students</h4>
 
 <ul>
+	<li><strong>  Danielle Tsao</strong> , 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
 
+	<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	<li><strong>  Haijun Jia (Beihang University)</strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
 <!--	
   <li><strong>Alistair Brogan</strong>, Summer 2008
     Topic: The Mathematics of Principal-Agent Problems
