--- a/_pages/team.html
+++ b/_pages/team.html
@@ -62,6 +62,7 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <font color="
 Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
 Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
+Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
 	
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
