--- a/_pages/team.html
+++ b/_pages/team.html
@@ -123,8 +123,9 @@ Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue
 	
 </ul>
 
-<h4>Visiting Faculty</h4>
+<h4>Long-term Visitors</h4>
 	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – Present<br>	
+	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China), 2020.02 – Present<br>	
 
 
 
