--- a/_pages/links.html
+++ b/_pages/links.html
@@ -5,7 +5,10 @@ permalink: /links/
 author_profile: true
 ---
 
-<ul>
+<h3><strong>Useful links</strong><br>
+</h3>
+
+</ul>
 <li> <a href="https://github.com/sgyzetrov/ComputeCanada_Resources"> A tutorial of using Compute Canada Servers prepared by my Student Simon Guo </a> </li>
 <li> <a href="https://www.youtube.com/playlist?list=PLmTpraKlPXDSPbP2L8MYZoweGSzi9gNTr"> The Data Scientist's Toolbox, Video by big names from Hopkins </a> </li>	
 <li> <a href="http://adv-r.had.co.nz/Style.html"> Style guide for R programming </a> </li>
@@ -15,6 +18,13 @@ author_profile: true
 <li> <a href="https://www.youtube.com/watch?v=v8p4ph2MAvI"> Video: The 3rd generation seuqncing technology </a> </li>
 <li> <a href="https://www.youtube.com/watch?v=k9VFNLLQP8c&t=31s&ab_channel=iBiologyTechniques"> Video: Single-cell seuqncing technology </a> </li>  
 <li> <a href="https://www.youtube.com/watch?v=UbOlhhpNj-A&ab_channel=mathetal"> Video: Tutorial for using Seurat to annotate cell-types in clusters of scRNA-seq data</a> </li>  
+<li> <a href="https://www.genomebc.ca/blog/single-cell-omics-will-offer-big-insights"> Genome BC News about our single-cell genomics research in COPD</a> </li>  
+<li> <a href="https://www.bloomberg.com/press-releases/2020-10-27/-10m-in-funding-coming-to-bc-researchers-for-improved-grapevine-and-cannabis-management"> Bloomberg BC News about our research in developing genomic diagnostic tests for virus detection in grapevines</a> </li>  
+</ul>
+
+<h3><strong>News</strong><br>
+</h3>
+</ul>
 <li> <a href="https://www.genomebc.ca/blog/single-cell-omics-will-offer-big-insights"> Genome BC News about our single-cell genomics research in COPD</a> </li>  
 <li> <a href="https://www.bloomberg.com/press-releases/2020-10-27/-10m-in-funding-coming-to-bc-researchers-for-improved-grapevine-and-cannabis-management"> Bloomberg BC News about our research in developing genomic diagnostic tests for virus detection in grapevines</a> </li>  
 </ul>
