--- a/_pages/team.html
+++ b/_pages/team.html
@@ -207,6 +207,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
 	Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
 	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver
+	Current job: <a href="https://www.ea.com/"> Amazon </a> , Vancouver
 
  <!--	Award 2: Trainee Award 2018.9-2019.9  <span class="pink">($19,000)</span> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
