--- a/_pages/links.html
+++ b/_pages/links.html
@@ -25,4 +25,5 @@ author_profile: true
 </ul>
 <li> <a href="https://www.genomebc.ca/blog/single-cell-omics-will-offer-big-insights"> Genome BC News </a> about our single-cell genomics research in COPD </li>  
 <li> <a href="https://www.bloomberg.com/press-releases/2020-10-27/-10m-in-funding-coming-to-bc-researchers-for-improved-grapevine-and-cannabis-management"> Bloomberg News </a> about our research in developing genomic diagnostic tests for virus detection in grapevines</li>  
+<li> I am on <a href="https://www.uvic.ca/news/media/2021+experts-on-phased-easing-covid-rules+expert-advisory">UVic's expert advisory</a> around BC’s Restart Plan and COVID-19 in general. </li>  
 </ul>
