--- a/_pages/team.html
+++ b/_pages/team.html
@@ -12,7 +12,7 @@ author_profile: true
 	
   <li><strong>Yan Xu</strong>, 2018.01 – Present (on sick leave)<br>
 Award 1: (2018.05-2018.08) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
-Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
+Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -20,7 +20,7 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <font color="
 
  <li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.09 – Present<br>
  <!--	Internship:  <br>  -->
- Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$5,000</font> <br> 
+ Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -28,7 +28,7 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <font color="
 	
 <li><strong> Mahsa Tavakoli</strong>, 2021.09 – Present<br>
  <!--	Internship:  <br>  -->
- Award 1: (2021.09 - 2022.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000&nbsp; </font> <br> 
+ Award 1: (2021.09 - 2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000&nbsp; </font> <br> 
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -50,7 +50,7 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <font color="
 <ul>
   <li><strong>Yiqi Qiao</strong> (Co-supervisor <a href="http://www.math.uvic.ca/~jzhou/"> Dr. Julie Zhou </a>, UVic), 2017.09 – Present (on sick leave)<br>
  <!--	Internship:  <br>  -->
-	Award: (2017.09) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$5,000</font> <br>
+	Award: (2017.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -59,7 +59,7 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <font color="
 
 <li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2019.09 – Present<br>
  <!--	Internship:  <br>  -->
-Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
 Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
@@ -73,7 +73,7 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
 
 <li><strong>  Yuying Huang</strong> (Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic), 2019.09 – Present<br>
 Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
-Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
+Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 
 	
@@ -95,20 +95,20 @@ Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
 	
 	<li><strong>  Kailun Bai</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
 	 <!--	Internship:  <br>  -->
-  Award: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$5,000</font> <br>
+  Award: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
-  Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship,   <font color="blue">$2,500</font> <br>
+  Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>
 	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
 
 	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
-Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000 </font> <br>
+Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -178,7 +178,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
   <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.4<br>
  <!--	Internship:  <br>  -->
 	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>
-	 Award1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+	 Award1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 	 Internship: (2020.01-2020.06) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
 	 Award2: (2020.07-2020.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
@@ -188,7 +188,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
  <li><strong>Qincheng Lu</strong>, 2020.08<br>
  <!--	Internship:  <br>  -->
- 	Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship   <font color="blue"> $15,000 </font> <br>
+ 	Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship  <br> <!-- <font color="blue"> $15,000 </font> <br> -->
  <!--   Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> -->  
     First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
