--- a/_pages/team.html
+++ b/_pages/team.html
@@ -48,13 +48,40 @@ Award 2: (2018.09-2019.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 <h4>Master Students</h4>
 
 <ul>
-  <li><strong>Yiqi Qiao</strong> (Co-supervisor <a href="http://www.math.uvic.ca/~jzhou/"> Dr. Julie Zhou </a>, UVic), 2017.09 – Present (on sick leave)<br>
+	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
-	Award: (2017.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
+Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
+
+	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li>
+
+	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
+Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
+ <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+	
+	
+	<li><strong>  Kailun Bai</strong>, 2020.09 – Present<br>	
+	 <!--	Internship:  <br>  -->
+  Award: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+	</li>
+	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
+  Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
+Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
+	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>
+	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
 
 
 <li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2019.09 – Present<br>
@@ -84,40 +111,13 @@ Internship: (2021.06-2021.08) Department of Mathematics and Statistics, Universi
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Xiangling Ji</strong>, 2020.09 – Present<br>	
-Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
- <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-	
-	
-	<li><strong>  Kailun Bai</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
-	 <!--	Internship:  <br>  -->
-  Award: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-	</li>
-	<li><strong>  Yichen Yan</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>	
-  Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
-Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $16,000 </font> <br>
-	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	  </li>
-	<li><strong>  Xiaolin Huang</strong>,  2020.09 – Present<br>	  </li>
-
-	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+		<li><strong>Yiqi Qiao</strong> (Co-supervisor <a href="http://www.math.uvic.ca/~jzhou/"> Dr. Julie Zhou </a>, UVic), 2017.09 – Present (on sick leave)<br>
  <!--	Internship:  <br>  -->
-Award: (2021.9-2022.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
+	Award: (2017.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-
-	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Chang Bi</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
-	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li>
 
 	
 </ul>
