--- a/_pages/team.html
+++ b/_pages/team.html
@@ -98,7 +98,7 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
 	
 
 
-<li><strong>  Yuying Huang</strong> (Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic), 2019.09 – Present<br>
+<li><strong>  Yuying Huang</strong> , 2019.09 – Present<br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
 Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
 Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
